--- a/network_connection/ESP32_AccessPoint/platformio.ini
+++ b/network_connection/ESP32_AccessPoint/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 921600
+lib_deps = 
+    bblanchon/ArduinoJson @ ^7.3.1
+    arduino-libraries/NTPClient @ ^3.2.1
